# cnosdb

./: .dockerignore  .gitignore  .gitlab-ci.yml  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  CnosDBWeChatUserGroupGuidelines.md  Contributor License Agreement.md  Cross.toml  Dockerfile  Dockerfile.build  Dockerfile_data  Dockerfile_for_k8s  Dockerfile_jenkins  Dockerfile_meta  Jenkinsfile  LICENSE  Makefile  README.cn.md  README.md  README_CN.md  ROADMAP.md  build.py  build.sh  build_cluster.sh  clippy.toml  cnosdb.go  cross.toml  endpoint.sh  errors.go  flag  go.mod  go.sum  go_vendor.sh  node.go  push-main.bat  push-master.bat  run_cluster.sh  (+2 more)
catalog/: Cargo.toml
catalog/src/: factory.rs  lib.rs
client/: Cargo.toml  README.md  client.go  config.go
client/src/: command.rs  config.rs  ctx.rs  exec.rs  functions.rs  helper.rs  lib.rs  main.rs  print_format.rs  print_options.rs  progress_bar.rs
common/cache/: Cargo.toml
common/datafusion_dep/: Cargo.toml
common/derive_traits/: Cargo.toml
common/error_code/: Cargo.toml
common/http_protocol/: Cargo.toml
common/license/: Cargo.toml
common/limiter_bucket/: Cargo.toml
common/line_protocol/: Cargo.toml
common/lru_cache/: Cargo.toml
common/mem_allocator/: Cargo.toml
common/memory_pool/: Cargo.toml
common/metrics/: Cargo.toml
common/models/: Cargo.toml
common/protocol_parser/: Cargo.toml
common/protos/: .gitignore  Cargo.toml  build.rs  rustfmt.toml
config/: Cargo.toml  build.rs  config.toml  config_31001.toml  config_32001.toml  config_8902.toml  config_8912.toml  config_8922.toml  generate_tls_x509.cnf  generate_tls_x509.sh  limiter.toml
config/resource/: config_8902.toml  config_8912.toml  config_8922.toml
config/scripts/: common.sh  generate_config.sh  generate_tls_x509.sh
config/src/: bytes_num.rs  cache_config.rs  check.rs  cluster_config.rs  deployment.rs  deployment_config.rs  duration.rs  global_config.rs  heartbeat_config.rs  hinted_off_config.rs  lib.rs  limiter_config.rs  log_config.rs  meta_config.rs  node_config.rs  nodebasic_config.rs  override_by_env.rs  query_config.rs  security_config.rs  service_config.rs  storage_config.rs  sub_config.rs  trace.rs  wal_config.rs
config/tls/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
coordinator/: Cargo.toml  todo
coordinator/src/: commad.rs  command.rs  errors.rs  file_info.rs  hh_queue.rs  lib.rs  meta_client.rs  meta_client_mock.rs  metrics.rs  node_mgr.rs  raft_manager.rs  raft_writer.rs  reader.rs  resource_manager.rs  service.rs  service_mock.rs  subscriber.rs  tenant_manager.rs  tests.rs  tskv_executor.rs  user_manager.rs  vnode_mgr.rs  writer.rs
e2e_test/: Cargo.toml
e2e_test/src/: case.rs  cluster_def.rs  coordinator_tests.rs  flight_sql.rs  http_api_tests.rs  https_api_tests.rs  kv_service_tests.rs  lib.rs  prom.rs  schema_service_tests.rs  utils.rs  vector_service_test.rs
e2e_test/test_data/: dump.sql  dump_multi.sql  dump_tenant.sql  log_0.txt  log_1.txt  oceanic_station.txt
main/: Cargo.toml  build.rs
main/examples/: flight_rpc_server.rs  flight_sql_server.rs
main/scripts/: cluster.sh
main/src/: main.rs  memory.rs  server.rs  signal.rs
main/tools/: cnosdb_imexport.rs
meta/: Cargo.toml  client.go  client_test.go  cluster.sh  config.go  config_test.go  data.go  data_internal_test.go  data_test.go  errors.go  http_handler.go  limiter.toml  node.go  query_authorizer.go  raft_state.go  remote_client.go  response_logger.go  server.go  server_config.go  singleton.sh  start_meta.sh  store.go  store_fsm.go  test-cluster.sh  write_authorizer.go
meta/config/: config.toml  config_21001.toml  config_21002.toml  config_21003.toml  config_8901.toml  config_8911.toml  config_8921.toml  config_8931.toml
meta/internal/: meta.pb.go  meta.proto
meta/scripts/: cluster.sh  singleton.sh
meta/src/: client.rs  error.rs  lib.rs  limiter.rs  meta_admin.rs  meta_app.rs  meta_client.rs  meta_client_mock.rs  meta_manager.rs  signal.rs  tenant_manager.rs  thread_service.rs  user_manager.rs  user_manager_mock.rs
meta/tests/: test_meta.sh
models/: Cargo.toml
models/src/: consistency_level.rs  errors.rs  field_info.rs  lib.rs  node_info.rs  points.rs  series_info.rs  tag.rs
query/: Cargo.toml
query/benches/: aggregate_function.rs
query/src/: catalog.rs  context.rs  db.rs  error.rs  exec.rs  lib.rs  meta.rs  predicate.rs  schema.rs  stream.rs  table.rs  tskv_exec.rs
query/tests/: datafusion.rs  query_db.rs
replication/: Cargo.toml
replication/src/: apply_store.rs  entry_store.rs  errors.rs  lib.rs  main.rs  metrics.rs  multi_raft.rs  network_client.rs  network_grpc.rs  network_http.rs  network_server.rs  node_store.rs  raft_network.rs  raft_node.rs  state_store.rs
server/: Cargo.toml  config.go  gzip.go  http_config.go  http_handler.go  io.go  requests.go  response_logger.go  response_writer.go  server.go
server/continuous_querier/: config.go  config_test.go  continuous_queries.md  service.go  service_test.go
server/coordinator/: client_pool.go  config.go  meta_client.go  meta_executor.go  points_writer.go  pool.go  rpc.go  service.go  shard_mapper.go  shard_writer.go  statement_executor.go
server/hh/: config.go  node_processor.go  service.go
server/precreator/: README.md  config.go  service.go
server/region/: config.go  service.go
server/rp/: config.go  service.go
server/snapshotter/: client.go  service.go
server/src/: instance.rs  lib.rs
server/subscriber/: config.go  http.go  service.go  udp.go
server/ttl/: config.go  service.go
trace/: Cargo.toml
trace/src/: lib.rs
tskv/: Cargo.toml
tskv/benches/: data_merge.rs  direct_io_bench.rs  kvcore_bench.rs  snafu_bench.rs
tskv/src/: byte_utils.rs  compute.rs  context.rs  database.rs  engine.rs  engine_mock.rs  error.rs  file_manager.rs  file_utils.rs  iterator.rs  kv_option.rs  kvcore.rs  lib.rs  lru_cache.rs  main.rs  memcache.rs  option.rs  points.rs  schema.rs  summary.rs  tseries_family.rs  tskv_ctx.rs  version_set.rs  vnode_store.rs  wal.rs
util/: Cargo.toml
(+2183 files in other folders)
