[workspace]
resolver = "2"
default-members = ["main"]
members = [
    "common/models",
    "common/protos",
    "common/protocol_parser",
    "common/metrics",
    "common/trace",
    "common/trace_http",
    "common/utils",
    "common/http_protocol",
    "common/error_code",
    "common/error_code/error_code_macro",
    "common/lru_cache",
    "common/limiter_bucket",
    "common/memory_pool",
    "query_server/spi",
    "query_server/query",
    "query_server/test",
    "query_server/sqllogicaltests",
    "e2e_test",
    "coordinator",
    "config",
    "meta",
    "tskv",
    "main",
    "client",
]

[workspace.dependencies]
actix-web = "4.3.1"
aes = "0.8"
anyhow = "1"
async-backtrace = "0.2.2"
async-recursion = "1.0.0"
async-stream = "0.3"
async-trait = "0.1"
backtrace = "0.3"
base64 = "0.20.0"
bcrypt = "0.15.0"
bincode = "1.3.3"
blake3 = "1.3.3"
byteorder = "1.4.3"
bytes = "1.1"
bzip2 = "0.4.3"
cbc = "0.1.2"
chrono = "0.4"
clap = { version = "4", features = ["default", "derive"] }
color-eyre = "0.6"
console-subscriber = "0.1.8"
core_affinity = "0.8.0"
crc32fast = "1.3.0"
criterion = { version = "0.5.1" }
crossbeam-channel = "0.5"
ctrlc = "3"
dashmap = "5.2"
derive_builder = "0.12.0"
arrow = { version = "42.0.0", features = ["prettyprint"] }
arrow-array = { version = "42.0.0" }
arrow-schema = { version = "42.0.0", features = ["serde"] }
arrow-flight = { version = "42.0.0" }
datafusion-proto = { git = "https://github.com/Subsegment/arrow-datafusion.git", branch = "syk-pub" }
datafusion = { git = "https://github.com/Subsegment/arrow-datafusion.git", branch = "syk-pub" }
diff = "0.1.13"
dirs = "5.0.1"
env_logger = "0.10.0"
flatbuffers = "22.9"
flate2 = "1.0.24"
futures = { version = "0.3", default-features = false }
integer-encoding = "4.0.0"
lazy_static = "1.4"
libc = { version = "0.2", default-features = false }
md-5 = "0.10"
minivec = "0.4.0"
mio = "0.8"
moka = "0.11.2"
nom = "7.1.1"
num-traits = "0.2.14"
num_cpus = "1.13.0"
num_enum = "0.6.1"
object_store = { version = "0.6.1", features = ["aws", "gcp", "azure"] }
once_cell = "1.12.0"
openraft = { git = "https://github.com/datafuselabs/openraft", rev = "914fcb4dad32a2f187b808298048e9e8b912977f", features = [
    "serde",
] }
openssl = { version = "0.10.48", features = ["vendored"] }
os_info = { version = "3" }
parking_lot = { version = "0.12" }
paste = "1.0"
pin-project = "1.0"
pprof = { version = "0.11.0", features = [
    "flamegraph",
    "protobuf-codec",
    "frame-pointer",
] }
prost = "0.11.0"
prost-build = "0.11.0"
prost-types = { version = "0.11.2" }
protobuf = "3.2.0"
psutil = "3.2.2"
q_compress = "0.11.1"
radixdb = "0.2.5"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11.18", features = ["json"], default-features = false }
roaring = "0.10.1"
rsa = "0.9.2"
rustyline = "9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serial_test = "2.0.0"
skiplist = "0.5.1"
sled = "0.34.7"
snafu = "0.7"
snap = "1.0.0"
static_assertions = "1.1"
sys-info = "0.9.1"
sysinfo = "0.29.4"
tempfile = "3"
tikv-jemalloc-ctl = "0.5"
tikv-jemalloc-sys = { version = "0.5", features = [
    "stats",
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
tikv-jemallocator = "0.5.0"
time = { version = "0.3.7" }
tokio = { version = "1.21" }
tokio-stream = "0.1"
tokio-util = { version = "0.7.0" }
toml = "0.5.9"
tonic = "0.9"
tonic-build = "0.9"
tower = "0.4.13"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-futures = "0.2"
tracing-subscriber = "0.3.16"
url = "2.2"
uuid = "1.1"
walkdir = "2.3.2"
warp = "0.3.5"
winapi = "0.3.9"
windows = { version = "0.48.0" }
zstd = "0.12.3"
sqllogictest = "0.13.2"
duration-str = "0.5.0"
http = "0.2.9"
itertools = "0.11.0"
opentelemetry-jaeger = { version = "0.18.0" }
opentelemetry_sdk = { version = "0.19.0" }
opentelemetry_api = { version = "0.19.0" }
dateparser = "0.1.7"
run_script = "0.10.1"
geo = "0.26.0"
geozero = "0.11.0"

[workspace.package]
edition = "2021"
version = "2.3.2"

# When you want to debug a third-party library,
# you can use patch,
# which will use your local third-party library code

# [patch."https://github.com/cnosdb/arrow-datafusion"]
# datafusion = { path = "../arrow-datafusion/datafusion/core" }
# datafusion-proto = { path = "../arrow-datafusion/datafusion/proto" }

[profile.dev]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'

[profile.test]
codegen-units = 16
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.test-ci]
debug-assertions = true
incremental = true
inherits = "test"
overflow-checks = false
panic = 'unwind'

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
