[workspace]
default-members = ["main"]
members = [
    "common/models",
    "common/protos",
    "common/protocol_parser",
    "common/metrics",
    "common/trace",
    "common/utils",
    "common/http_protocol",
    "common/limiter_bucket",
    "common/memory_pool",
    "common/cache",
    "common/derive_macros",
    "common/derive_traits",
    "common/version",
    "query_server/spi",
    "query_server/query",
    "query_server/sqllogicaltests",
    "e2e_test",
    "coordinator",
    "config",
    "meta",
    "tskv",
    "main",
    "client",
    "replication",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "2.4.3"

[workspace.dependencies]

## Data types
dashmap = "6.1.0" # Faster concurrent map
geo = "0.30.0"
geozero = "0.14.0"
lru = "0.14.0"
minivec = "0.5.0" # Single pointer sized Vec type
roaring = "0.10" # Compressed bitset
skiplist = "0.5.1"
stable-vec = "0.4.1"
uuid = "1.16.0"

## Serialization & deserialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.8"

## Databases
heed = "0.22.0" # Wrapper of LMDB
radixdb = "0.2.5"

## Codecs
base64 = "0.22.1"
bcrypt = "0.17.0"
blake3 = "1.8.2"
brotli = "8.0.0"
bzip2 = "0.5.2"
crc32fast = "1.4.2"
flate2 = "1.1.1" # zlib, gzip, raw
fnv = "1.0.7" # Fowler-Noll-Vo hash
integer-encoding = "4.0.2" # varint, zigzag, fixedint
lz4_flex = "0.11.3"
md-5 = "0.10.6"
openssl = { version = "0.10.66", features = ["vendored"] } # todo: remove this
pco = "0.4.2"
rsa = "0.9.8"
siphasher = "1.0.1"
snap = "1.1.1" # snappy
twox-hash = "2.1.0" # XXHash & XXH3 algorithms
zstd = "0.13.3"

## HTTP
actix-web = "4.10"
axum = { version = "0.7" }
http = "1.3"
http-body = "1.0"
hyper = "1.6"
hyper-util = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tower = "0.5"
warp = "0.3.7"

## Protocols
flatbuffers = "25.2.10"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protobuf = "3.7.2"
tonic = { version = "0.12", features = ["gzip"] }
tonic-build = "0.12"

## Asynchronous
async-backtrace = "0.2"
async-recursion = "1.1"
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
futures-task = "0.3"
futures-util = "0.3"
tokio = "1.44"
tokio-retry = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

## Macro
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

## Logging & tracing
backtrace = "0.3"
console-subscriber = "0.4"
env_logger = "0.11"
minitrace = "0.6"
minitrace-opentelemetry = "0.6" # Opentelemetry reporter, needs opentelemetry=^0.23
opentelemetry = "0.23"
opentelemetry-otlp = "0.16" # Opentelemetry collector, needs opentelemetry=^0.23, opentelemetry-proto=^0.6
opentelemetry_sdk = "0.23"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = "0.3"

## Command line & file system & operating system
clap = { version = "4.5", features = ["default", "derive"] }
ctrlc = "3.4"
dircpy = "0.3"
dirs = "6.0"
figment = "0.10" # Configuration
indicatif = "0.17" # Progress bar
memmap2 = "0.9.7" # Memory-mapped file IO
mio = "1.0.3"
num_cpus = "1.17"
os_info = "3.12"
rpassword = "7.4" # Read password in console
run_script = "0.11"
rustyline = "15.0" # TODO(zipper): upgrade to 17
sys-info = "0.9"
sysinfo = "0.34"
tempfile = "3.20"
walkdir = "2.5"
winapi = "0.3.9"
windows = "0.61"

## Arrow & datafusion
arrow = { version = "55.0.0", features = ["prettyprint"] }
arrow-array = { version = "55.0.0" }
arrow-buffer = { version = "55.0.0" }
arrow-flight = { version = "55.0.0" }
arrow-schema = { version = "55.0.0", features = ["serde"] }
# datafusion = { version = "47.0.0" }
datafusion = { path = "../../opensource/arrow-datafusion/datafusion/core" } # TODO(zipper): remove this
# datafusion-proto = { version = "47.0.0" }
datafusion-proto = { path = "../../opensource/arrow-datafusion/datafusion/proto" } # TODO(zipper): remove this

## Test & benchmark
assert_float_eq = "1.1"
criterion = { version = "0.5.1" } # Benchmark
serial_test = "3.2"
sqllogictest = "0.28.1"
static_assertions = "1.1"

## Miscellany
anyhow = "1.0"
atoi_simd = "0.16" # Bytes to integer
byte-unit = "5.1"
byteorder = "1.5"
bytes = "1.10"
chrono = "0.4"
dateparser = "0.2"
derive_builder = "0.20"
diff = "0.1"
duration-str = "0.17"
fast-float = "0.2"
hex = "0.4"
humantime = "2.2"
itertools = "0.14"
lazy_static = "1.5"
libc = { version = "0.2.172", default-features = false }
maplit = "1.0" # Macros for maps / sets
moka = { version = "0.12", features = ["sync"] } # Cache
nom = "8.0" # Build parsers
num-traits = "0.2"
num_enum = "0.7"
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
once_cell = "1.21"
openraft = { version = "0.9.18", features = ["serde"] }
parking_lot = { version = "0.12" }
paste = "1.0"
pin-project = "1.1"
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec", "frame-pointer"] }
rand = "0.9"
ranges = "0.4"
regex = "1.11"
simdutf8 = "0.1"
snafu = "0.8"
strum = "0.27" # Macros for enums and strings
strum_macros = "0.27"
tikv-jemalloc-ctl = "0.6"
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = "0.6"
time = "0.3"
url = "2.5"

# When you want to debug a third-party library,
# you can use patch,
# which will use your local third-party library code

# [patch."https://github.com/cnosdb/arrow-datafusion"]
# datafusion = { path = "../arrow-datafusion/datafusion/core" }
# datafusion-proto = { path = "../arrow-datafusion/datafusion/proto" }

[profile.dev]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'

[profile.test]
codegen-units = 16
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true

[profile.test-ci]
debug-assertions = true
incremental = true
inherits = "test"
overflow-checks = false
panic = 'unwind'

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
