[workspace]
resolver = "2"
default-members = ["main"]
members = [
    "common/models",
    "common/protos",
    "common/protocol_parser",
    "common/metrics",
    "common/trace",
    "common/utils",
    "common/http_protocol",
    "common/limiter_bucket",
    "common/memory_pool",
    "common/cache",
    "common/derive_macros",
    "common/derive_traits",
    "common/version",
    "query_server/spi",
    "query_server/query",
    "query_server/sqllogicaltests",
    "e2e_test",
    "coordinator",
    "config",
    "meta",
    "tskv",
    "main",
    "client",
    "replication",
]

[workspace.dependencies]
actix-web = "4.5.1"
anyhow = "1.0"
arrow = { version = "42.0.0", features = ["prettyprint"] }
arrow-array = { version = "42.0.0" }
arrow-buffer = { version = "42.0.0" }
arrow-flight = { version = "42.0.0" }
arrow-schema = { version = "42.0.0", features = ["serde"] }
assert_float_eq = "1.1.3"
async-backtrace = "0.2.6"
async-recursion = "1.0.5"
async-trait = "0.1.77"
atoi_simd = "0.15.5"
backtrace = "0.3.69"
base64 = "0.21.7"
bcrypt = "0.15.0"
bincode = "1.3.3"
brotli = "3.4.0"
byteorder = "1.5.0"
byte-unit = "5.1.4"
bytes = "1.5.0"
bzip2 = "0.4.4"
chrono = "0.4.33"
clap = { version = "4.4", features = ["default", "derive"] }
console-subscriber = "0.2.0"
crc32fast = "1.3.2"
criterion = { version = "0.5.1" }
ctrlc = "3.4"
dashmap = "5.5.3"
datafusion = { git = "https://github.com/cnosdb/arrow-datafusion.git", branch = "27.0.0" }
datafusion-proto = { git = "https://github.com/cnosdb/arrow-datafusion.git", branch = "27.0.0" }
dateparser = "0.2.1"
derive_builder = "0.13.0"
diff = "0.1.13"
dircpy = "0.3.15"
dirs = "5.0.1"
duration-str = "0.7"
env_logger = "0.11.1"
fast-float = "0.2.0"
figment = "0.10.18"
flatbuffers = "24.3.25"
flate2 = "1.0.28"
fnv = "1.0.7"
futures = { version = "0.3.30", default-features = false }
futures-util = "0.3.10"
futures-task = "0.3"
geo = "0.27.0"
geozero = "0.11.0"
heed = "0.21.0"
hex = "0.4"
http = "0.2.9"
http-body = "0.4.6"
humantime = "2.1.0"
indicatif = "0.17.8"
integer-encoding = "4.0.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
libc = { version = "0.2.152", default-features = false }
lru = "0.12.2"
lz4_flex = "0.11.3"
md-5 = "0.10.6"
memmap2 = "0.9.4"
minitrace = "0.6.4"
minitrace-opentelemetry = "0.6.4"
minivec = "0.4.0"
moka = { version = "0.12.5", features = ["sync"] }
nom = "7.1.3"
num-traits = "0.2.17"
num_cpus = "1.16.0"
num_enum = "0.7.2"
object_store = { version = "0.6.1", features = ["aws", "gcp", "azure"] }
once_cell = "1.19.0"
openraft = { version = "0.9.17", features = ["serde"] }
# openraft = { git = "https://github.com/datafuselabs/openraft", rev = "4b78dd38b9f3b22d87695fb06446dcf0311629c2", features = ["serde"] }
maplit = "1.0.2"
openssl = { version = "0.10.66", features = ["vendored"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
os_info = { version = "3" }
parking_lot = { version = "0.12.1" }
paste = "1.0"
pco = "0.4.6"
pin-project = "1.1.4"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec", "frame-pointer"] }
proc-macro2 = "1.0.85"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf = "3.2"
quote = "1.0.36"
radixdb = "0.2"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
roaring = "0.10"
rpassword = "7.3.1"
rustyline = "13"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serial_test = "3.2.0"
simdutf8 = "0.1.4"
siphasher = "1.0.1"
skiplist = "0.5.1"
sled = "0.34.7"
snafu = "0.7"
snap = "1.1.1"
sqllogictest = "0.28.0"
strum = "0.26"
strum_macros = "0.26"
syn = "2.0.66"
sys-info = "0.9.1"
sysinfo = "0.30"
tempfile = "3"
tikv-jemallocator = "0.5"
time = { version = "0.3" }
tokio = { version = "1.35" }
tokio-retry = "0.3.0"
tokio-stream = "0.1"
tokio-util = { version = "0.7" }
toml = "0.8"
tonic = { version = "0.9.2", features = ["gzip"] }
tonic-build = "0.9.2"
tower = "0.4.13"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
twox-hash = "1.6.3"
url = "2.5"
uuid = "1.7"
walkdir = "2.4"
warp = "0.3.6"
winapi = "0.3.9"
windows = { version = "0.56" }
zstd = "0.13"
[workspace.package]
edition = "2021"
version = "2.4.3"

# When you want to debug a third-party library,
# you can use patch,
# which will use your local third-party library code

# [patch."https://github.com/cnosdb/arrow-datafusion"]
# datafusion = { path = "../arrow-datafusion/datafusion/core" }
# datafusion-proto = { path = "../arrow-datafusion/datafusion/proto" }

[profile.dev]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'

[profile.test]
codegen-units = 16
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true

[profile.test-ci]
debug-assertions = true
incremental = true
inherits = "test"
overflow-checks = false
panic = 'unwind'

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
