[package]
name = "client"
description = "Command Line Client for Cnosdb."
version = "2.0.0"
edition = "2021"
readme = "README.md"

[dependencies]
http_protocol = { path = "../common/http_protocol", features = ["http_client"] }

clap = { workspace = true, features = ["derive", "cargo"] }
datafusion = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
mimalloc = { workspace = true, default-features = false }
rustyline = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
