[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
macros = { path = "../common/macros" }

async-backtrace = { workspace = true, optional = true }
figment = { workspace = true, features = ["toml", "env"] }
num_cpus = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sys-info = { workspace = true }
toml = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
