[package]
name = "config"
version.workspace = true
edition.workspace = true
default-run = "cnosdb-config"

[lib]

[[bin]]
name = "cnosdb-config"
path = "src/bin/cnosdb_config/main.rs"

[dependencies]
derive_traits = { path = "../common/derive_traits" }
utils = { path = "../common/utils" }
version = { path = "../common/version" }

async-backtrace = { workspace = true, optional = true }
figment = { workspace = true, features = ["toml", "env"] }
num_cpus = { workspace = true }
serde = { workspace = true }
sys-info = { workspace = true }
toml = { workspace = true }
byte-unit = { workspace = true }
humantime = { workspace = true }

[features]
default = ["testing"]
backtrace = ["async-backtrace"]
testing = []
