[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
models = { path = "../common/models" }
protos = { path = "../common/protos", features = ["test"] }
trace = { path = "../common/trace" }
utils = { path = "../common/utils" }
tskv = { path = "../tskv" }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
line_protocol = { path = "../common/line_protocol"}

walkdir = { workspace = true }
datafusion = { workspace = true }
async-channel = "1.7.1"
snafu = "0.7"
flatbuffers = { workspace = true }
async-trait = "0.1"
bincode = "1.3.3"
tracing = "0.1"
lazy_static = "1.4"
tracing-futures = "0.2"
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7.0" }
parking_lot = "0.12"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rust-crypto = "0.2.36"
tower = "0.4.13"
tonic = { workspace = true }
chrono = { workspace = true }
