[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
models = { path = "../common/models" }
protos = { path = "../common/protos", features = ["test"] }
trace = { path = "../common/trace" }
trace_http = { path = "../common/trace_http" }
utils = { path = "../common/utils" }
tskv = { path = "../tskv" }
meta = { path = "../meta" }
replication = { path = "../replication" }
metrics = { path = "../common/metrics" }
protocol_parser = { path = "../common/protocol_parser" }

openraft = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
datafusion = { workspace = true }
snafu = { workspace = true }
flatbuffers = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tower = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true }
async-backtrace = { workspace = true, optional = true }
md-5 = { workspace = true }
rand = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]