[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
memory_pool = { path = "../common/memory_pool" }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protocol_parser = { path = "../common/protocol_parser" }
protos = { path = "../common/protos" }
replication = { path = "../replication" }
trace = { path = "../common/trace" }
tskv = { path = "../tskv" }
utils = { path = "../common/utils" }

async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
maplit = { workspace = true }
md-5 = { workspace = true }
openraft = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
