[package]
name = "e2e_test"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
http_protocol = { path = "../common/http_protocol", features = ["http_client"] }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protos = { path = "../common/protos" }
utils = { path = "../common/utils" }

arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
arrow-schema = { workspace = true, optional = false }
backtrace = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
diff = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, default-features = false, features = ["alloc"] }
parking_lot = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "blocking"], default-features = false }
serial_test = { workspace = true }
sysinfo = { workspace = true, optional = false }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls", "transport"] }
walkdir = { workspace = true }

[features]
default = []
coordinator_e2e_test = []
debug_mode = []                 # Run cnosdb and cnosdb-meta in debug mode, make the compilation faster.
not_passed = []
startup_in_serial = []          # Make sure data node register in meta server in the order they defined.
