[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../common/models" }
config = { path = "../config" }
line_protocol = { path = "../common/line_protocol" }
protos = { path = "../common/protos" }
query = { path = "../query_server/query" }
trace = { path = "../common/trace" }
tskv = { path = "../tskv" }
spi = { path = "../query_server/spi" }
mem_allocator = { path = "../common/mem_allocator" }
metrics = { path = "../common/metrics" }
http_protocol = { path = "../common/http_protocol" }

async-stream = { workspace = true }
async-trait = { workspace = true }
backtrace = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ctrlc = { workspace = true }
datafusion = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, default-features = false, features = ["alloc"] }
lazy_static = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
parking_lot = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["transport", "tls"] }
warp = { workspace = true, features = ["tls"] }

[dev-dependencies]
reqwest = "0.11"
