[package]
name = "main"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cnosdb"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
coordinator = { path = "../coordinator" }
http_protocol = { path = "../common/http_protocol" }
memory_pool = { path = "../common/memory_pool" }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protocol_parser =  { path = "../common/protocol_parser" }
protos = { path = "../common/protos" }
query = { path = "../query_server/query" }
spi = { path = "../query_server/spi" }
trace = { path = "../common/trace" }
trace_http = { path = "../common/trace_http" }
tskv = { path = "../tskv" }
utils = { path = "../common/utils" }
replication = { path = "../replication" }

actix-web = { workspace = true }
arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
async-backtrace = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
backtrace = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ctrlc = { workspace = true, features = ["termination"] }
dashmap = { workspace = true }
datafusion = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, default-features = false, features = ["alloc"] }
lazy_static = { workspace = true }
libc = { workspace = true }
moka = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
openraft = { workspace = true, features = ["serde"] }
os_info = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
snafu = { workspace = true }
sys-info = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["transport", "tls"] }
tracing-futures = { workspace = true }
warp = { workspace = true, features = ["tls"] }
dateparser = { workspace = true }

[target.'cfg(unix)'.dependencies]
pprof = { workspace = true, features = ["flamegraph", "protobuf-codec", "frame-pointer"] }
tikv-jemallocator = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]

[dev-dependencies]
prost-types = { workspace = true }
reqwest = { workspace = true }


[[example]]
name = "flight_sql_server"
path = "examples/flight_sql_server.rs"

[[example]]
name = "flight_rpc_server"
path = "examples/flight_rpc_server.rs"
