[package]
name = "meta"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cnosdb-meta"
path = "src/bin/main.rs"

[dependencies]
config = { path = "../config" }
derive_traits = { path = "../common/derive_traits" }
limiter_bucket = { path = "../common/limiter_bucket" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protos = { path = "../common/protos" }
replication = { path = "../replication" }
trace = { path = "../common/trace" }
utils = { path = "../common/utils" }
version = { path = "../common/version" }

async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
dashmap = { workspace = true }
openraft = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
psutil = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sled = { workspace = true }
snafu = { workspace = true }
sys-info = { workspace = true }
sysinfo = { workspace = true, optional = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

futures = { workspace = true, features = ["alloc"] }
heed = { workspace = true }
heed-traits = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
tower = { workspace = true }
warp = { workspace = true }

[target.'cfg(unix)'.dependencies]
pprof = { workspace = true, features = ["flamegraph", "protobuf-codec", "frame-pointer"] }

[features]
default = []
backtrace = ["async-backtrace"]
meta_e2e_test = ["psutil", "sysinfo"]

[dev-dependencies]
maplit = "1.0.2"
